# mysql-connections-performance-test

./: .gitignore  README.md
docker/: .env.dist  build.sh  docker-compose.yml
docker/containers/app/: Dockerfile
docker/containers/nginx/: Dockerfile
docker/containers/nodejs/: Dockerfile
docker/containers/php8.3/: Dockerfile
docker/containers/python/: Dockerfile
golang/http/: main.go
golang/http/config/: scheme.percona.go
golang/http/schema/: response.go
performance-tests/: go.mod
performance-tests/lib/httpclient/: client.go  result.go  table.go
php/: composer.json
php/http/: hello-world.php  index.php  migration.php  mysqli_execute_serial_select_20k.php  mysqli_execute_serial_select_id_20k.php  mysqli_insert_data_bulk_20k.php  mysqli_query_async_select_20k.php  mysqli_query_serial_select_20k.php  mysqli_query_serial_select_id_20k.php
php/src/: Crypto.php
python/: requirements.txt
rust/: Cargo.toml
rust/src/: main.rs
servers/express/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
servers/golang/: go.mod
servers/nestjs/: package-lock.json
servers/nestjs-fastify/: package-lock.json  package.json
servers/php/: composer.json
servers/python/: requirements.txt
servers/rust/: Cargo.toml
servers/rust/src/: endpoint.rs  main.rs  scheme.rs
servers/rust/src/endpoint/: hello_world.rs  http_client.rs
servers/rust/src/endpoint/mysql/: select.rs
servers/rust/src/endpoint/mysql/select/: mysql.rs  sqlx.rs
skeleton1/: Cargo.toml
skeleton1/src/: main.rs
swoole/: composer.json
swoole/src/: main.php
(+96 files in other folders)
