[package]
name = "rust-performance-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum={version = "0.7.9"}
serde={version = "1.0.216", features = ["derive"]}
tokio={version = "1.42.0", features = ["full"]}
tracing-subscriber = "0.3.19"
chrono="0.4.39"
serde_json = "1.0.134"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

mysql="25.0.1"

sqlx = {version = "0.8.2", features = ["mysql", "runtime-tokio", "chrono"]}